data/derived/fa15/progs/unify/prog3358.ml.out
Characters 253-260:
  |h'::t' -> mulByDigit i t' @ [carry i h + remainder h' i] @ [remainder h i + carry i ];;
                                                                               ^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
